...

  List<String> getConnectedDevices() {
    return _server.getConnectedDeviceIds();
  }

  // Processing indicators to prevent user from spamming buttons
  bool isProcessingEndSession = false;    // To block button "End Session"
  bool isProcessingStartSession = false;  // To block button "Start Session"
  bool isProcessingTakePhoto = false;     // To block button "Take Photo"


  @override
  void initState() {
    super.initState();
    _server.onClientCountChange = (count) {
...

        LogService.instance.registerLog("Session created with GUID: $sessionGuid");

        setState(() {});
        if (context.mounted){
          ScaffoldMessenger.of(context).showSnackBar(
            SnackBar(content: Text("Session created successfully: $sessionGuid")),
          );
        }
      } else {
        if (context.mounted){
          ScaffoldMessenger.of(context).showSnackBar(
            const SnackBar(content: Text("Failed to create session")),
...
          bool success = await _apiService.endSession(SessionManager.instance.sessionGuid!);
          if (success) {
            _server.endCurrentSession(); // End locally
            setState((){});
            if (context.mounted){
              ScaffoldMessenger.of(context).showSnackBar(
                const SnackBar(content: Text("Capture session ended")),
              );
            }
          } else {
            if (context.mounted){
              ScaffoldMessenger.of(context).showSnackBar(
                const SnackBar(content: Text("Failed to end session on the server")),
...
          width: buttonWidth,
          child: ElevatedButton(
            onPressed: sessionGuid != null ? _toggleRecording : null,
            style: ElevatedButton.styleFrom(
              backgroundColor: isRecording ? Colors.red : Colors.green,
            ),
            child: Text(isRecording ? "Stop Recording" : "Start Recording"),
          ),
        ),
        SizedBox(height: buttonDistance),
        SizedBox(
          width: buttonWidth,
          child: ElevatedButton(
...
