...
      SnackBar(content: Text(message)),
    );
  }

  String _getOrientationString(CameraLensDirection direction) {
    return switch (direction) {
      CameraLensDirection.back => "Back",
      CameraLensDirection.front => "Front",
      CameraLensDirection.external => "External",
    };
  }

  /// Shows a simple help/instructions dialog.
...
